2008-08-11  Sven Neumann  <sven@gimp.org>

	* gtk/gtkmenu.c
	* gtk/gtkmenuitem.c
	* gtk/gtkmenushell.c
	* gtk/gtknotebook.c
	* gtk/gtkoldeditable.c
	* gtk/gtkpaned.c: use canonical signal names.

2008-08-11  Michael Natterer  <mitch@imendio.com>

	* demos/gtk-demo/textscroll.c (create_text_view): don't use the
	deprecated gtk_box_pack_start_defaults().

2008-08-11  Sven Neumann  <sven@gimp.org>

	* gtk/gtkaboutdialog.c
	* gtk/gtkcellrendereraccel.c
	* gtk/gtkcellrenderercombo.c
	* gtk/gtkcellrendererspin.c
	* gtk/gtkcellrenderertext.c
	* gtk/gtkclipboard.c
	* gtk/gtkcolorsel.c
	* gtk/gtkcombo.c
	* gtk/gtkcombobox.c
	* gtk/gtkdnd-quartz.c
	* gtk/gtkdnd.c
	* gtk/gtkentry.c
	* gtk/gtkentrycompletion.c
	* gtk/gtkfilechooserbutton.c
	* gtk/gtkfilechooserdefault.c
	* gtk/gtkfilechooserentry.c
	* gtk/gtkfontsel.c
	* gtk/gtkinputdialog.c
	* gtk/gtkmenutoolbutton.c
	* gtk/gtkpathbar.c
	* gtk/gtktooltip.c: use canonical signal names in g_signal_connect().

2008-08-11  Sven Neumann  <sven@gimp.org>

	* gdk/gdkkeys.c
	* gdk/gdkscreen.c
	* gdk/gdkdisplaymanager.c: use canonical signal names.

2008-08-10  Richard Hult  <richard@imendio.com>

	* gtk/gtkclipboard-quartz.c: (gtk_clipboard_wait_for_uris),
	(gtk_clipboard_request_uris): Implement missing functions.

2008-08-09  Sven Herzberg  <sven@imendio.com>

	Bug 544863 – gtkquartz.h not included in released 2.13.5 package

	* gtk/Makefile.am: always add gtkquartz.h to EXTRA_DIST

2008-08-08  Cody Russell  <bratsche@gnome.org>

	Bug 547027 – menus are broken

	* gtk/gtkmenushell.c
	* gtk/gtkmenu.c: In enter/leave notify events, check that the crossing
	mode is not GTK_GRAB, GTK_UNGRAB, or STATE_CHANGED.  Fixes regressions
	in menus caused by bug #56070.

2008-08-09  Sven Herzberg  <sven@imendio.com>

	Get the gdk+cairo test to pass distcheck, too

	* gdk/tests/Makefile.am: set GDK_PIXBUF_MODULE_FILE so the test can
	pick up the one created at build time
	* gdk/tests/check-gdk-cairo.c (main): delete the output files after a